# microgpt

./: CMakeLists.txt  README.md  microgpt.py  microgpt_cuda.cu  microgpt_optimized.html  microgpt_zh.py
.github/workflows/: smoke-test.yml
